--- a/data/src/main/res/values/strings.xml
+++ b/data/src/main/res/values/strings.xml
@@ -1,7 +1,3 @@
 <resources>
-    <string name="api_base_url">https://api.twitter.com/</string>
-    <string name="consumer_key">PFV8HcF8d4SdNQO8wMkFM6the</string>
-    <string name="consumer_secret">lE1kccEunHQHSNsgmyG1EyTkkuR7yUUJJIDvpX12y0EyIxxhvS</string>
-    <string name="access_token">1682143086-hLEbn0Ezjwwf2gLs45faGbHqbmK9ioroKEMUamS</string>
-    <string name="access_token_secret">X0zgfqlx6t0xmfFi0ykXMhncX3JTrSpJB4ddEeN7VUpyo</string>
+    <string name="app_name">Twitter Login Demo</string>
 </resources>
