--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Twitter app</string>
     <string name="screen_name">\@%1s</string>
+    <string name="empty"/>
+    <string name="following">Following</string>
+    <string name="followers">Followers</string>
+    <string name="joined">Joined %1s</string>
 </resources>
