--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="followers">Followers</string>
     <string name="joined">Joined %1s</string>
     <string name="something_went_wrong">Something went wrong, please try again</string>
+    <string name="title_activity_main2">MainActivity</string>
+    <string name="title_timeline">Timeline</string>
 </resources>
